# python-lsp-client

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: ci.yml
lsp_client/: __init__.py  client.py  protocol.py  utils.py
tests/: test_client.py  test_protocol.py
