[metadata]
name = lsp_client
version = 0.0.2
description = An incomplete client implemenation of the Language Server Protocol in Python."
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Christian Kissig
url = https://github.com/christiankissig/python-lsp-client
license = MIT

[options]
packages = find:
python_requires = >=3.6
install_requires =

[options.extras_require]
dev =
    black
    flake8
    isort
test =
    pytest
ci =
    pytest-cov

[options.package_data]
* = *.txt, *.rst, *.md
